--- a/style/style.css
+++ b/style/style.css
@@ -20,10 +20,13 @@ form label {
 }
 
 *:required:valid {
-  /* outline: green solid 2px; */
   background-color: #b5e3a9;
 }
 
 *:required:invalid {
   background-color: #e7b1b1;
+}
+
+.article-usual {
+  background-color: #c1c4c7;
 }
