--- a/style/over1199.css
+++ b/style/over1199.css
@@ -1,5 +1,5 @@
 body {
-  width: 74.9em;
-  margin-left: auto;
-  margin-right: auto;
+  width: 1200px;
+  margin-left: auto !important;
+  margin-right: auto !important;
 }
