--- a/style/style.css
+++ b/style/style.css
@@ -52,3 +52,12 @@ form label {
   padding-left: 0;
   padding-right: 0;
 }
+
+/* weather list */
+#forecast-img {
+  width: 100px;
+}
+
+.weather-border {
+  border: 2px solid red;
+}
