--- a/style/style.css
+++ b/style/style.css
@@ -62,6 +62,10 @@ form label {
   border: 2px solid red;
 }
 
+.credit {
+  font-size: 0.5rem;
+}
+
 /* fontawesome link */
 .purple {
   color: #6a0c7d;
